# matrix_benchmarking

./: CMakeLists.txt  README.md  arma_test.cpp  boost_inverse.h  boost_test.cpp  eigen_test.cpp  main.cpp  main.cpp.bak
data/: mat1000bin.mat
